welcome.lessons.welcome.array.has271.Has271.scala.error
has271:2: error: value foreach is not a member of Int
  for (i<- nums.length-1) {
                      ^